--- a/public/views/pwd-recover.html
+++ b/public/views/pwd-recover.html
@@ -7,9 +7,10 @@
 	<form 	data-ng-submit="User.passwordreset(User.knownemail)">	
 
 		<div class="form group">
-			<label>Forgot Password? Enter E-Mail Used to Register Your Account</label>
+			<label></label>
 			<input class= "form-control" 
 			type="text" 
+			placeholder="Forgot Password? Enter E-Mail Used to Register Your Account"
 			data-ng-model="User.knownemail">
 		</div>
 
