add click user name to select user days and add privacy policy

--- a/public/views/otherprofile.html
+++ b/public/views/otherprofile.html
@@ -1,6 +1,6 @@
 
 <div class = "regSurround">
- 	<div class='loginDirection'>Profile Page for {{Day.dayUserName}} </div>
+ 	<div class='loginDirection'>About {{Day.dayUserName}} </div>
 
  		<i data-ng-click = "User.userViewSwitch='grid'; "  
 			class="material-icons right small" 
@@ -28,7 +28,7 @@
 		</div>  
 	</div>
 		  		 
-<p> My Days </p>
+<p>Days Created by {{Day.dayUserName}} </p>
 <grid-day-view></grid-day-view>
 
 </div> 
