--- a/public/views/password-reset.html
+++ b/public/views/password-reset.html
@@ -11,7 +11,7 @@
 		</div>
 		
 		<div class="form group">
-			<label class="label-space">Password</label>
+			<label class="label-space"> </label>
 
 			<span class='alertinform' data-ng-model="User.password" data-ng-show ="User.password.length < 5">
 			You need {{5-User.password.length}} more characters.
@@ -32,7 +32,7 @@
 		</div>
 
 		<div class="form group">
-			<label class="label-space">Password Confirm</label>
+			<label class="label-space"> </label>
 
 			<span class='alertinform' data-ng-model="User.password" data-ng-show ="User.matchingPassword === false">
 				Passwords must match.
