--- a/public/views/user-profile-page.html
+++ b/public/views/user-profile-page.html
@@ -42,6 +42,10 @@
 		<otherprofile></otherprofile>
 	</div>
 
+	 <div data-ng-switch-when="privacypolicy">
+		<privacypolicy></privacypolicy>
+	</div>
+
 </div>
 
 
