--- a/public/views/foot-of-page.html
+++ b/public/views/foot-of-page.html
@@ -4,6 +4,10 @@
 			<h5 class="white-text">The Perfect Day</h5>
 			<p class="grey-text text-lighten-4">Explore your world. Share your experiences.</p>
 			<p class="grey-text text-lighten-5">&copy; 2015 The Perfect Day</p>
+			<div class = 'privacypolicy' 
+			data-ng-click="User.profileSelect('privacypolicy');
+						   User.userViewSwitch='profile';"> 
+			Privacy Policy</div>
 		</div>
 	</div>
 </footer>
