--- a/public/views/grid-day-view.html
+++ b/public/views/grid-day-view.html
@@ -1,40 +1,44 @@
 <div class="row bestDaysFrame" style="">
 <!-- TESTING GRID DAY VIEW - Day.days is: {{Day.days}}  and user is: {{User.username}} and {{daycontrollerdays}} is daycontoller
  -->  	
-
-
-
  	<div data-ng-repeat="day in Day.days" class="col singleDay"> 
-		 	<div class="title" data-ng-click ="Day.showOneDay(day._id,day.userName)">{{day.dayName}}</div>
+ 		 	<div class="title" data-ng-click ="Day.showOneDay(day._id,day.userName)">{{day.dayName}}</div>
+
+				 <!-- 	<br>
+				 	Day.userName is {{day.userName }}  <br>
+				 	User.username is {{User.username}} <br>
+				 	<div data-ng-show="(day.userName === User.username)">EQUAL</div>
+				 	<div data-ng-show="(day.userName !== User.username)">NOT EQUAL</div>
+				 	<br> -->
 
 		 	<div class="user">
-		 		<div data-ng-click="Day.getUserProfile(day.userName)">{{day.userName }}</div>
+		 		<div  style="text-decoration: underline; cursor: pointer;"  data-ng-click="Day.getUserProfile(day.userName); Day.viewEditUserDays(day.userName);">{{day.userName }}</div>
 		 	</div>
-
+ 
 		 	<div class="daydate">{{day.dayDate}}</div>
 
 		 	<div class="description">{{day.dayDesc}}</div>
 
 			<div class="whowasthere">
-			<div>      
-				<input type="checkbox" class="checkBox" id="test6 teenCheckbox" data-ng-model="day.dayTeen" data-ng-checked="{{day.dayTeen}}" />
- 				<label for="teenCheckbox">Teen friendly?</label>
-    		</div>
-			<div>
-				<input type="checkbox" class="checkBox" id="test6 kidCheckbox" data-ng-model="day.dayChild" data-ng-checked="{{day.dayChild}}" />
-				<label for="kidCheckbox">Kid friendly?</label>
- 			</div>
+				<div>      
+					<input type="checkbox" class="checkBox" id="test6 teenCheckbox" data-ng-model="day.dayTeen" data-ng-checked="{{day.dayTeen}}" />
+	 				<label for="teenCheckbox">Teen friendly?</label>
+	    		</div>
+				<div>
+					<input type="checkbox" class="checkBox" id="test6 kidCheckbox" data-ng-model="day.dayChild" data-ng-checked="{{day.dayChild}}" />
+					<label for="kidCheckbox">Kid friendly?</label>
+	 			</div>
 			</div>
 			<div data-ng-repeat="location in day.locations track by $index">
 				<div class="location">
-				<div class="locationName">{{location.location}}</div>
-				<div class="locDesc">{{location.desc}}</div>
-				<div data-ng-repeat="photo in location.photosThumb track by $index" class="thumbPhotos">
-					<img src="{{photo}}"></img>
-				</div>
+					<div class="locationName">{{location.location}}</div>
+					<div class="locDesc">{{location.desc}}</div>
+					<div data-ng-repeat="photo in location.photosThumb track by $index" class="thumbPhotos">
+						<img src="{{photo}}"></img>
+					</div>
 				</div>
 			</div>
- 		<div class="tags">{{day.dayTags}}</div>
-	
+ 			<div class="tags">{{day.dayTags}}</div>
+		</div>
 	</div>
 </div>
