--- a/public/views/my-user-functions.html
+++ b/public/views/my-user-functions.html
@@ -1,7 +1,10 @@
 <div class="navbar-fixed" >
 	<nav>
 		<a style ='cursor: pointer;'><div class="left button-collapse" id="titleGraphic" 
-											data-ng-click="User.userViewSwitch='grid' ">
+											data-ng-click="User.userViewSwitch='grid';
+											User.userService.init(completeInit);
+											Day.viewEditUserDays(null); ">
+											               
 				 Daybreak</div> </a>
  	  	<div class="container" >		
 			<ul style ='cursor: pointer;'  class='right hide-on-small-and-down button-collapse'>
@@ -9,6 +12,7 @@
 				<li><a><div 
 						data-ng-click="User.userViewSwitch = 'grid';
 						               User.userService.init(completeInit);
+						               Day.viewEditUserDays(null);
 						               ">
 						Home  
 						</div>
@@ -30,7 +34,8 @@
 
 				<li><a data-ng-show="User.userState==='loggedIn'" 
 					   data-ng-click="Day.getUserProfile(User.username);
- 					   				  User.profileSelect('myAccount');">
+ 					   				  User.profileSelect('myAccount');
+ 					   				  Day.viewEditUserDays(User.username);">
 			  			&nbsp;-&nbsp;{{User.username}}&nbsp;-&nbsp;
 				</a></li>
 
