--- a/public/views/otherprofile.html
+++ b/public/views/otherprofile.html
@@ -2,7 +2,10 @@
 <div class = "regSurround">
  	<div class='loginDirection'>About {{Day.dayUserName}} </div>
 
- 		<i data-ng-click = "User.userViewSwitch='grid'; "  
+ 		<i data-ng-click = "User.userViewSwitch='grid';
+							User.userService.init(completeInit);
+							Day.viewEditUserDays(null); " 
+							  
 			class="material-icons right small" 
 			style ='cursor: pointer;'>clear
 		</i>
