--- a/public/views/user-profile-page.html
+++ b/public/views/user-profile-page.html
@@ -29,7 +29,7 @@
 	</div>
 
 	 <div data-ng-switch-when="deleteaccount">
-	 	 <delete-account></delete-account>
+	 	 <deleteaccount></deleteaccount>
 	</div>
  
 	 <div data-ng-switch-when="passwordreset">
