--- a/public/views/self-profile.html
+++ b/public/views/self-profile.html
@@ -40,7 +40,7 @@
 								 </div>-->
 
 								<input data-ng-model="User.userAbout"
-									class='profileInfo'   > 
+									class='profileAbout'   > 
 				  				</input>
 
 								<!-- <input  data-ng-submit="User.updateUserInfo()"
@@ -89,7 +89,7 @@
 								<input  
 									data-ng-click=" User.profileSelect('deleteaccount');"
 									
-									class="btn btn-success btn-sm btn-block red right" 
+									class="btn btn-success btn-sm btn-block left red" 
 									type="submit" 
 									value="Delete Account"> 
 
