delete clear returns to full grid display with all users

--- a/public/views/deleteaccount.html
+++ b/public/views/deleteaccount.html
@@ -1,8 +1,9 @@
 <div class = "regSurround">
 
 	<i data-ng-click = "User.userViewSwitch='grid';
-	 					User.profileMode=null;" 
-						class="material-icons right small" 
+						User.userService.init(completeInit);
+						Day.viewEditUserDays(null);" 
+						class="material-icons right small"
 						style ='cursor: pointer;'>clear
 	</i>
 <div>
