--- a/public/views/password-reset.html
+++ b/public/views/password-reset.html
@@ -27,7 +27,7 @@
 				name='password'
 				data-ng-model="User.password"
 				data-ng-keyup="User.passconfirm(User.password, User.passwordConfirm)"
-				placeholder="Enter secret password. Must be 5 characters. "
+				placeholder="Enter secret password. Must be at least 5 characters. More is better."
 			required>
 		</div>
 
