--- a/public/views/self-profile.html
+++ b/public/views/self-profile.html
@@ -54,7 +54,7 @@
 
 					<div class='publicPrivateLabel'>Private</div>
 
-					<div class= 'profilePrivate'>
+					<div class= 'profilePrivate' >
 
 				  			<div class='profileLabel'>Change E-mail? &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
@@ -74,7 +74,7 @@
 				  			
 				  		
 				  			<div class ='profileLabel'>Password:&nbsp;
-				  				<span class='profileInfo' id='pname'>  &bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull; &nbsp;
+				  				<span class='profileInfo' id='pname'> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull; &nbsp;
 				  				</span>
 
 				  				<span class="btn btn-sm btn-block right" 
