--- a/public/views/passwordresetform.html
+++ b/public/views/passwordresetform.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <h3>Once you reset your password, you will be returned to DayBreak, where you can log in with your new information</h3>
 <form action="" method="post">
   <label for="password">Password: </label>
@@ -6,4 +6,4 @@
   <label for="password-verify">Verify Password: </label>
   <input name="password-verify" placeholder="Enter password again">
   <input type="submit" value="Submit">
-</form>
+</form> -->
