--- a/public/views/user-profile-page.html
+++ b/public/views/user-profile-page.html
@@ -21,6 +21,10 @@
 	 <div data-ng-switch-when="facebook">
 		<facebook-login></facebook-login>
 	</div>
+
+	 <div data-ng-switch-when="checkemailtoconfirmreg">
+		<checkemailtoconfirmreg></checkemailtoconfirmreg>
+	</div>
  
 <!-- LOGGED IN FUNCTIONS -->
 
