--- a/public/views/reg-view.html
+++ b/public/views/reg-view.html
@@ -1,8 +1,7 @@
 <div class = "regSurround">
 	<form 
 		data-ng-submit="User.registerValidUser(User);
-							 User.userViewSwitch='profile'; 
- 							 User.profileSelect('checkemailtoconfirmreg');"
+							 User.userViewSwitch='profile';" 
 			name = "regForm" 
 		novalidate>
 
