--- a/public/views/self-profile.html
+++ b/public/views/self-profile.html
@@ -75,6 +75,7 @@
 							</div>
 				  			
 				  			<br> 
+
 				  			
 				  		
 				  			<div class ='profileLabel'>Password:&nbsp;
@@ -86,11 +87,12 @@
 				  			</div>
 							
 							<br>
+							<br>
 
-							<div class ='profileLabel'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+							<div class ='profileLabel'>Account Control:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 									<span  
 										data-ng-click="User.profileSelect('deleteaccount');"
-									 	class="btn btn-success btn-sm btn-block left red" 
+									 	class="btn btn-success btn-sm btn-block right red" 
 										type="submit">Delete Account
 									</span> 
 								 
