--- a/public/views/checkemailtoconfirmreg.html
+++ b/public/views/checkemailtoconfirmreg.html
@@ -1,3 +1,3 @@
  <div> 
-	<!-- <p>Check your email to complete your registration.</p> -->
+	<!-- <p>Check your email to complete your registration. xxxx</p> -->
 </div>
