major refactoring of db calls

--- a/public/views/deleteaccount.html
+++ b/public/views/deleteaccount.html
@@ -1,8 +1,7 @@
 <div class = "regSurround">
 
 	<i data-ng-click = "User.userViewSwitch='grid';
-						User.userService.init(completeInit);
-						Day.viewEditUserDays(null);" 
+						User.userService.init(completeInit);" 
 						class="material-icons right small"
 						style ='cursor: pointer;'>clear
 	</i>
