--- a/public/views/tagSearch.html
+++ b/public/views/tagSearch.html
@@ -3,12 +3,10 @@
 			<div class="tagFrame">    <!--  tag search begin -->
 				 
 					<label class="label-space"></label>
-
-						<input 
-							data-ng-model="Tag.tag"
+ 						<input  data-ng-model="Tag.tag"
 						class= "form-control" 
 						type="text"
-			 			placeholder="Enter search words, separated by spaces. (Example: Boston hiking restaurant.)"
+			 			placeholder="Enter search words, separated by spaces. (Example: Portland hiking restaurant.)"
 						required>
 
 						<a 
