--- a/public/views/grid-day-view.html
+++ b/public/views/grid-day-view.html
@@ -1,14 +1,16 @@
 <div class="row bestDaysFrame" style="">
-<!-- TESTING GRID DAY VIEW - Day.days is: {{Day.days}}  and user is: {{User.username}} and {{daycontrollerdays}} is daycontoller
+
+<!-- TESTING GRID DAY VIEW - Day.days is: {{Day.days}}  and user is: {{User.username}}  
  -->  	
  	<div data-ng-repeat="day in Day.days" class="col singleDay"> 
  		 	<div class="title" data-ng-click ="Day.showOneDay(day._id,day.userName)">{{day.dayName}}</div>
 
 		 	<div class="user">
  
-		 		<div  style="text-decoration: underline; cursor: pointer;"  data-ng-click="Day.getUserProfile(day.userName); Day.viewEditUserDays(day.userName);">{{day.userName }}</div>
- 
-		 	</div>
+		 		<div  style="text-decoration: underline; cursor: pointer;"  
+		 			  data-ng-click="Day.getUserProfile(day.userName);">
+		 						   {{day.userName }}</div>
+ 		 	</div>
  
 		 	<div class="daydate">{{day.dayDate}}</div>
 
