--- a/public/views/otherprofile.html
+++ b/public/views/otherprofile.html
@@ -2,9 +2,9 @@
 <div class = "regSurround">
  	<div class='loginDirection'>About {{Day.dayUserName}} </div>
 
- 		<i data-ng-click = "User.userViewSwitch='grid';
-							User.userService.init(completeInit);
-							Day.viewEditUserDays(null); " 
+ 		<i data-ng-click = "Day.getUserProfile(null);
+							User.profileMode=null;
+						    User.userViewSwitch='grid';" 
 							  
 			class="material-icons right small" 
 			style ='cursor: pointer;'>clear
