the single day saga continues

--- a/public/views/locationList.html
+++ b/public/views/locationList.html
@@ -1,2 +1,1 @@
-<div ng-repeat="location in dayLocations">
-<div style="font-weight:bold;margin:5px 0 0 0;">{{location.location}}</div>{{location.desc}}</div>
+<div class='locationCard card-panel'><div class='card-title'>{{Location}}</div><div class='card-desc'>{{Location.locDesc}}</div></div>
