--- a/public/views/addDay.html
+++ b/public/views/addDay.html
@@ -32,8 +32,8 @@
 			<div data-ng-controller="locationController as Location" class="form-group controller" style="margin:10px 0;">
 				<h5>Find one location or add many!</h5>
 				<input type="text" id="pac-input" placeholder="Enter the name of location" data-ng-model="Location.locName">
-				<textarea class="form-control" data-ng-bind="locDesc" rows="3" data-ng-model="Location.locDesc" placeholder="Describe this location"></textarea>
-				<div class="btn btn-default" data-ng-click="Location.addLoc(Location,locName,locURL,locDesc)">Add this location</div>
+				<textarea id="descField" class="form-control" data-ng-bind="locDesc" rows="3" data-ng-model="Location.locDesc" placeholder="Describe this location"></textarea>
+				<div class="btn btn-default" data-ng-click="Location.addLoc(Location,locName,locURL,locDesc)" add-location>Add this location</div>
 				<div id="locationList"></div>
 			</div> 
 			<!-- END LOCATION CONTROLLER -->
