--- a/public/views/user-profile-page.html
+++ b/public/views/user-profile-page.html
@@ -36,6 +36,10 @@
 	 	 <password-reset></password-reset>
 	</div>
 
+	<div data-ng-switch-when="">
+		<grid-day-view></grid-day-view>
+	</div>
+
 <!-- LOGGED IN OR OUT FUNCTIONS -->
  
 	 <div data-ng-switch-when="otherprofile">
