--- a/public/views/otherprofile.html
+++ b/public/views/otherprofile.html
@@ -31,7 +31,7 @@
 		</div>  
 	</div>
 		  		 
-<p>Days Created by {{Day.dayUserName}} </p>
+<p>Days Created by {{Day.otherusername}} </p>
 <grid-day-view></grid-day-view>
 
 </div> 
