day update in progress

--- a/public/views/locationList.html
+++ b/public/views/locationList.html
@@ -1,1 +1,1 @@
-<div class='locationCard card-panel'><div class='card-title'>{{Location}}</div><div class='card-desc'>{{Location.locDesc}}</div></div>
+<div class='locationCard card-panel'><div class='card-title'>{{Location.location}}</div><div class='card-desc'>{{Location.desc}}</div></div>
