--- a/public/views/user-function-view.html
+++ b/public/views/user-function-view.html
@@ -1,7 +1,7 @@
  
 	<div class = 'surround'>	
 		
-		<div class = 'userContainer' 
+		<div class = 'userContainer valign-wrapper' 
 		data-ng-show= "User.userViewSwitch !== null " >
 
 			<div  data-ng-show= "User.userViewSwitch === 'profile' " >
