--- a/public/views/updateDay.html
+++ b/public/views/updateDay.html
@@ -2,22 +2,21 @@
  	<div class="col s4 m6 l7 left-align" style="padding:1rem;"> <!-- open column one -->		
 		<!-- Begin conditional for update day -->
 		<div class="form-group">
-			<form data-ng-model-options="{getterSetter : true}">
+			<form data-ng-model-options="{ getterSetter: true }">
 			<h4>Update your day.</h4>
-
-			<div contentEditable="true" type="text" class="form-control name" data-ng-model="Day.dayName" >
-			{{Day.chosenDay.data[0].dayName}}
-			</div>
+			<input contentEditable="true" type="text" class="form-control name" data-ng-model="Day.chosenDay.data[0].dayName">
+			</input>
+			
 
 			<div>by&nbsp;{{Day.chosenDay.data[0].userName}}</div>				
 
-			<div contentEditable="true" class="form-control desc" rows="5" data-ng-model="Day.dayDesc">{{Day.chosenDay.data[0].dayDesc}}
-			</div> 
+			<textarea contentEditable="true" class="form-control desc" rows="5" value="Day.chosenDay.data[0].dayDesc" data-ng-model="Day.chosenDay.data[0].dayDesc">
+			</textarea>
 
 			<div class="switch form-control">Child-friendly?
 				<label>
 				No
-				<input type="checkbox" id="child" data-ng-model="Day.child">
+				<input type="checkbox" id="child" data-ng-model="Day.chosenDay.data[0].dayChild">
 				<span class="lever"></span>
 				Yes
 				</label>
@@ -26,7 +25,7 @@
 			<div class="switch form-control">Teen-friendly?
 				<label>
 				No
-				<input type="checkbox" id="teen" data-ng-model="Day.teen">
+				<input type="checkbox" id="teen" data-ng-model="Day.chosenDay.data[0].dayTeen">
 				<span class="lever"></span>
 				Yes
 				</label>
@@ -36,29 +35,28 @@
 			<!-- LOCATION controller begin-->
 			<div data-ng-controller="locationController as Location" class="form-group controller" style="margin:10px 0;">
 				<h5>Where you went.</h5>
-				<location-list data-ng-model="Day.locations"></location-list>
+				<location-list data-ng-repeat="Location in Day.chosenDay.data[0].locations" data-ng-model="Day.chosenDay.data[0].locations"></location-list>
 				<h5>Add more locations.</h5>
 				<input type="text" class="form-control" id="pac-input" placeholder="Enter the name of location" data-ng-model="Location.locName">
 				<textarea class="form-control" data-ng-bind="locDesc" rows="3" data-ng-model="Location.locDesc" placeholder="Describe this location"></textarea>
 				<div class="btn btn-default" data-ng-click="Location.addLoc(Location,locName,locURL,locDesc)">Add this location</div>
+				<div id="locationList"></div>
 			</div>
 			<!-- END LOCATION CONTROLLER -->
 
 			<!-- TAG CONTROLLER BEGIN -->				
 			<div data-ng-controller="tagController as Tag" class="form-group">
 				<div>Use spaces between tags.</div>
-				<div contentEditable="true" type="text" 
+				<input contentEditable="true" type="text" 
 				id="tags" 
 				class="form-control" 
-				data-ng-change="Tag.enterTag(dayTags)" 
 				placeholder="Enter some tags" 
-				data-ng-model="Tag.dayTags">
-				{{Day.chosenDay.data[0].dayTags}}
-				</div>
+				data-ng-model="Day.chosenDay.data[0].dayTags">
+				</input>
 			</div> 
 			<!--END TAG CONTROLLER -->
 
-			<button class="btn btn-default" data-ng-click="Day.updateDay(Day,User)">Update this day</button> 
+			<button class="btn btn-default" data-ng-click="Day.updateDay(Day,User);User.userViewSwitch='grid'">Update this day</button> 
 			<button class="btn btn-default" data-ng-click="User.userViewSwitch='grid'">Discard without saving</button>
 
 			</form>
