--- a/public/views/updateDay.html
+++ b/public/views/updateDay.html
@@ -37,7 +37,7 @@
 				<h5>Where you went.</h5>
 				<location-list data-ng-repeat="Location in Day.chosenDay.data[0].locations" data-ng-model="Day.chosenDay.data[0].locations"></location-list>
 				<h5>Add more locations.</h5>
-				<input type="text" class="form-control" id="pac-input" placeholder="Enter the name of location" data-ng-model="Location.locName">
+				<input type="text" class="form-control" id="pac-input" placeholder="Enter the name of location" data-ng-bind="locName" data-ng-model="Location.locName">
 				<textarea class="form-control" data-ng-bind="locDesc" rows="3" data-ng-model="Location.locDesc" placeholder="Describe this location"></textarea>
 				<div class="btn btn-default" data-ng-click="Location.addLoc(Location,locName,locURL,locDesc)">Add this location</div>
 				<div id="locationList"></div>
